--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,4 +1,4 @@
-.footer {
+.main-contact + .footer {
 	margin-top: 0;
 	padding-top: 6.4rem;
 
